Add week 3 and 4 assignments documentation

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -83,12 +83,12 @@
   <p></p>
   <div class="flexrow">
     <img src="./servo.png" alt="servo" style="width:20%;" border="3px">
-    <img src="./motionsensor.png" alt="servo" style="width:20%;" border="3px">
+    <img src="./motionsensor.png" alt="motion sensor" style="width:20%;" border="3px">
   </div>
   <p></p>
   Here is a rough sketch of what the CD Carousel would look like:
   <div class="flexrow">
-    <img src="./cdsketch.png" alt="servo" style="width:75%;" border="8px">
+    <img src="./cdsketch.png" alt="cd sketch" style="width:75%;" border="5px">
   </div>
 
   <p></p>
@@ -98,6 +98,16 @@
     <li>Seamless implementation of the motion sensor on/off switch, servo motors, and corresponding power source.</li>
     <li>Securing CDs on the wheel to make sure they don't fall over when rotated.</li>
   </ul>
+  <p class="margin"></p>
+  <h4><b>Idea 4: Mechanical Watch Winder</b></h4>
+  Recently, I woke up, got ready for the day, and put on my watch, but saw that it read 8:30 when it was really 10:00! Mechanical watches usually
+  have a power supply of up to 42 hours, and apparently I had left it sitting for more than it could handle. To treat this problem, a device that constantly
+  rotates slowly throughout the day could wind the watch, hands-free, ensuring that the device is always fully functional.
+  <p></p>
+  <div class="flexrow">
+    <img src="./watch_winder.jpeg" alt="watch winder" style="width:40%;" border="5px">
+  </div>
+
   </xmp>
 </body>
 
