--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -30,8 +30,8 @@
   <p></p>
   <div class="flexrow"><img src="geneva_drawing.jpeg" alt="geneva_drawing" style="width:30%" border="3px"></div>
   <p></p>
-  Choosing what to actually put on display had me scratching my head. After cycling through a lot of random thoughts, one came to the surface...Almost 2 years ago,
-  I injured my back deadlifting at the gym and have since never picked up the barbell in deadlift form. My thought for this project was, maybe I could
+  Now I had to choose what to put on display using this mechanism. After cycling through a lot of random ideas, I remembered when almost 2 years ago,
+  I injured my back deadlifting at the gym and have not deadlifted since. My thought for this project was, maybe I could
   use the vertical motion to create a mechanism to show correct(ish) form for deadlifting! After some more thought about the complexity of correct form
   for the deadlift and how it would be difficult to get it exactly right, I decided to settle for semi-correct form (so, don't use this project in place of
   a good personal trainer!).
@@ -46,9 +46,33 @@
   <div class="flexrow"><img src="deadlifter_1.png" alt="deadlifter fusion" style="width:100%" border="3px"></div>
   <p></p>
   The initial design revealed some challenges that I didn't anticipate. First, I faced some trouble sizing the parameters to reasonable dimensions, ensuring
-  that all the pieces fit well together. This challenge was enhanced because of the high number of pieces that this project includes. I expect that
-  the pieces won't initially fit well together, and that I'll have to make some small adjustments. This obstacle also doesn't even include the mechanism
-  inside the box (the snail-shaped wheel attached to the servo motor), which will inevitably also introduce a compatibility challenge.
+  that all the pieces fit well together. This challenge was enhanced because of the high number of pieces that this project includes. After printing out all
+  of the pieces and assembling them, it became clear that there were a lot more problems. First, the wooden dowel I used to connect the wheel-motor mechanism to
+  the body of the deadlifter introduced a problem of balance between friction and stability---the hole cut through the top piece of the box was too big, but upon
+  making it smaller it had too much friction. Also, the snail cam mechanism was really hard to get right, so I decided to switch over to a round cam
+  with a plastic dowel attached to the edge, driven in a circular motion to produce a constant up-and-down motion.
+  <p></p>
+  After what seemed like a million different versions of the box and figure, I eventually settled on using a larger torso of the deadlifter to enable more
+  freedom of movement for the dowel. The pivot point for this movement would be on the deadlifter's back, and the larger torso made it so that the dowel
+  did not run into any of the screw-nut joints on the body.<p></p>
+
+  Another problem I ran into was in making sure that the deadlifter's legs did not cave inwards. To treat this problem, I used rubber bands to secure the
+  arms/barbell fixture to the thighs. This unfortunately limited the arm movement, but worked well enough to keep the legs bent outwards.<p></p>
+
+  The last piece of the puzzle was fixing the motor to the box, which was pretty easy but required some experimentation with what the best positioning
+  was. Some positions caused the deadlifter to only lift with one leg, and other positions caused a rocking motion. I eventually found a nice middle ground
+  where the deadlifter goes (more or less) straight up and down.<p></p>
+
+  <p></p>
+  <video width="600" controls muted autoplay style="display: block; margin: auto;">
+    <source src="deadlifter_demo.mp4" type="video/mp4">
+    Deadlifter demonstration
+  </video>
+
+  <p></p>
+  <b>Et voila!</b> DISCLAIMER: Again, please do follow this deadlifting form in the gym.
+
+
 
 
 
