--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -5,7 +5,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
-
 <nav class="navbar navbar-expand-sm navbar-dark">
   <div class="container-fluid d-flex justify-content-center">
     <h4><a class="nav-link" href="../index.html">PS 70</a></h4>
@@ -22,9 +21,47 @@
 
 <h3>Week 4: Microcontroller Programming</h3>
 
-<h4>[Do Something with an arduino]</h4>
+Expanding on last week's project of the deadlifter, I programmed the motor to change speed on the press of a button. The code is attached here:
 
+<div class="container mt-3">
+  <div class="card bg-light p-3">
+    <pre style="font-family: 'Courier New', monospace; white-space: pre-wrap; overflow-x: auto;">
+int A1A = 2;
+int A1B = 4;
+int buttonPin = 23;
+int val;
 
+void setup() {
+  // put your setup code here, to run once:
+  pinMode(A1A, OUTPUT);
+  pinMode(A1B, OUTPUT);
+  ledcAttach(A1A, 5000, 8);
+  pinMode(buttonPin, INPUT_PULLUP);
+}
+
+void loop() {
+  // put your main code here, to run repeatedly:
+  val = digitalRead(buttonPin);
+  if(val == LOW) {
+    ledcWrite(A1A, 240);
+    digitalWrite(A1B, LOW);
+  }
+  else{
+    ledcWrite(A1A, 210);
+    digitalWrite(A1B, LOW);
+  }
+}
+    </pre>
+  </div>
+</div>
+
+<p></p>
+This code uses the <b>ledcWrite</b> function, which is specific to the ESP32 API and modulates the analog speed of the motor set to a numerical value,
+instead of using <b>digitalWrite</b> to write a value like HIGH and LOW. This functionality allowed me to test out different motor speeds. I found that
+if the speed was too low, then the motor would halt, but a simple solution to kickstart it was to manually spin the shaft. The code I used sets the
+default speed to 210, and when the button is pressed, accelerates the speed to 240. Here is the breadboard arrangement I used:
+
+<div class="flexrow"><img src="deadlifter_breadboard.png" alt="deadlifter breadboard" style="width:30%" border="3px"></div>
 
 
 
@@ -33,6 +70,6 @@
 </body>
 
 <script src="../strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
