update weeks 6 and 7 index pages

--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -19,7 +19,8 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 4: Microcontroller Programming</h3>
+<h2 align="center"><b><u>Week 4: Microcontroller Programming</u></b></h2>
+<p class="margin"></p>
 
 Expanding on last week's project of the deadlifter, I programmed the motor to change speed on the press of a button. The code is attached here:
 
