--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -22,9 +22,19 @@
 
 <h3>Week 6: Electronic Inputs</h3>
 
-<h4>Assignment 1: Capactive Sensor<h4>
+For this week's assignment, I chose to expand on the exercise we did in class with the voltage divider + photoresistor. Instead of outputting the photoresistor data
+to an analog pin to view in the serial monitor, I wanted the output to be more visual, so I used an LED. The idea is that the photoresistor (which responds to light, as we know)
+will control the brightness of the LED based on how much light exposure it receives. After a simple breadboard configuration using one 100 Ohm resistor,
+it worked pretty well:
 
-<h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
+<div class="flexrow"><img src="photoresistor_led.png" alt="photoresistor LED" style="width:30%" border="3px"></div><p></p>
+
+And here is a video demonstration:<p></p>
+
+<video width="600" controls muted autoplay style="display: block; margin: auto;">
+  <source src="photoresistor_led.mp4" type="video/mp4">
+  Photoresistor LED
+</video>
 
 </div>
 </xmp>
