--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <xmp style="display:none;">
 
 <div class="container-fluid bg-3 text-center link-container">
-  <div class="hover_img"><a href="./01_intro/index.html" style="--index: 1"><b>I</b> >> Intro<span><img src="./fettywap.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img"><a href="./01_intro/index.html" style="--index: 1"><b>I</b> >> Intro<span><img src="./filler.png" alt="image" height="400" /></span></a></div>
   <div class="hover_img"><a href="./02_2Ddesign/index.html" style="--index: 2"><b>II</b> >> 2D Design<span><img src="./strokes_angles.jpeg" alt="image" height="400" /></span></a></div>
   <div class="hover_img"><a href="./03_fabrication/index.html" style="--index: 3"><b>III</b> >> Fabrication<span><img src="./currents.png" alt="image" height="400" /></span></a></div>
   <div class="hover_img"><a href="./04_microcontroller/index.html" style="--index: 4"><b>IV</b> >> Programming<span><img src="./ok_computer.png" alt="image" height="400" /></span></a></div>
