--- a/09_networking/index.html
+++ b/09_networking/index.html
@@ -22,18 +22,24 @@
 
 <h3>Week 9: Radio, WiFi, Bluetooth (IoT)</h3>
 
+<h4>Assignment: Servo movement with IoT</h4>
+
+For this project we decided to use IoT to control servo movement with a button. Here is the code below:
 
 <p class="margin">   </p>
 <div class="flexrow">
-  <a id="btn" href="wk9.zip" download>Download my files from this week!
+  <a id="btn" href="file:///Users/elikirtley/Documents/GitHub/PS70/09_networking/websocket.ino" download>Download my websockets code!
   </a>
 </div>
 <p class="margin">   </p>
 
-<h4>Assignment: [Program something with IOT]</h4>
+The main struggle with this project was ensuring compatability and that the libraries were up-to-date. To do this, we had to access the ESPAsyncWebServer
+source code to modify some out of date funcitons. But in the end it worked out:
 
-
-
+<video width="300" controls muted autoplay style="display: block; margin: auto;">
+  <source src="websocket.mp4" type="video/mp4">
+  websocket demo
+</video>
 
 </div>
 </xmp>
